CR-2007-05-14-0: Enhancem.: o removed not needed parameter in compile_source()
                            o added compile support for independent addtional
                              clusters
                            o new procedure: operate_add_cluster() (start
                              operation for specified cluster only)
                            o new procedure: get_additional_cluster_type()
                              return type of cluster ("cell" or "independent")
                 Review:    MD

CR-2007-05-11-0: Enhancem.: o Added configuration support for additional cell
                              and addtional independed clusters.
                            o Removed needless spawn output at testsuite startup.
                 Review:    JG

MP-2007-05-11-0: Enhancem.: Added test for CR 6328064. Checks to see if command
                            line parameters override script defaults for qsub.
                 Review:    JG

JG-2007-05-10-0: Enhancem.: New check_function in qmaster/reporting testing 
                            queue state reporting.
                 Review:    RD

CR-2007-05-10-0: Enhancem.: o added new command line option "start"
                            o added error reporting when testsuite is started
                              with command line options "start, kill and install"
                            o remote testsuites exit status and errors are now
                              reported in controller testsuite
                            o temp mail filename is now generated with 
                              get_tmp_file_name() (caused problems for controller
                              testsuite because of same mail file name)
                            o enhanced startup_core_system() to support the same
                              parameters as shutdown_core_system()
                 Review:    RD

RD-2007-05-09-0: Bugfix:    fixed qstat test for qstat AR changes